----------
* Added new document on using the XMLManager to marshall populations
  into XML representations that can be used for persistence, transmission,
  etc.
* Renamed Allele class to Gene class and updated all of the source files
  accordingly to fix source and documentation.
* Renamed Gene.setValue() and Gene.getValue() methods to Gene.setAllele()
  and Gene.getAllele(), respectively.
* Made various minor fixes.
* Updated various javadocs to increase clarity and accuracy.


0.32
----------
* Added new document on creating custom Alleles in the docs/ subdirectory.
* Modified WeightedRouletteSelector to represent the "wheel" as an array
  just prior to selection of Chromosomes in order to increase iteration 
  speed.
* Modified ReproductionOperator to simply add the Chromosomes from the 
  population directly into the pool of candidate chromosomes, rather than
  making a copy of each one and adding the copy, in order to increase speed
  and reduce memory consumption.
* Switched pooling from Alleles to Chromosomes. Removed AllelePool class
  and added ChromosomePool class. Also added generic Pool class, which
  ChromosomePool uses.
* WeightedRouletteSelector now pools its internal SlotCounter instances
  to save memory.
* Updated various Javadocs and comments that were dated, less helpful, or 
  simply wrong.
* Made various minor code changes to increase efficiency or improve 
  readability.
* Modified TestGenetics to only display the most fit Chromosome at the
  end, rather than dumping the entire Genotype.
* Added "debug" target to Ant build script so that debug versions of the
  JGAP classes can be easily built.
* Updated the copyright notices on all files.
* Updated the README file.


0.31
----------
* Fixed AllelePool to discriminate between alleles intended for different
  gene positions so that position-specific configurations will be preserved.
  Thanks to Alexandre Freire for reporting this bug.
* AllelePool is no longer a static class.